sumo/tests/netconvert/errors/ignore_errors_and_unknown_vclass/errors.netconvert
Error: Unknown vehicle class 'error-vclass1'.
